added pokemon into page

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <header>
-        <h1>Pokémon Pokédex</h1>
+        <h1>Pokémon Pokédex</h1>    
     </header>
     <nav>
         <!--random links-->
     </nav>
     <main>
-            <div></div>
-            <div></div>
+        <ol id="pokemon-list-container">
+        </ol>
     </main>
     <footer>
         <div>
