added team and obtained list

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Pokédex</title>
-    <script defer src="/src/script.js"></script>
+     <script defer src="src/script.js"></script> 
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,8 +16,17 @@
         <!--random links-->
     </nav>
     <main>
+        <div id="showcase-pokemon"></div>
+        <div id="pokemon-obtained-list">
+            <h3>Pokemon Obtained</h3>
+        </div>
+        <div id="pokemon-team-container">
+            <h3>Pokemon Team</h3>
+        </div>
         <ol id="pokemon-list-container">
         </ol>
+        <button id="back"> <= </button>
+        <button id="forward"> => </button>
     </main>
     <footer>
         <div>
