--- a/index.html
+++ b/index.html
@@ -10,45 +10,53 @@
 </head>
 <body>
     <header>
-        <h1>Pokémon Pokédex</h1>    
+        <h1 class="pokemon-header">Pokémon Pokédex</h1>    
     </header>
     <main>
-        <div id="showcase-pokemon"></div>
-        <div>
-        <button id="random-pokemon">Get Random Pokemon</button>
+        <div class="first-section-container">
+            <div id="showcase-pokemon"></div>
+            <div id="pokemon-obtained-list">
+                <h3>Pokémon Obtained</h3>
+            </div>
+            <div class= "pokemon-team-list-div">
+                <h3>Pokémon Team List</h3>
+                <ol id='pokemon-team-list'></ol>
+            </div>
         </div>
-        <div id="pokemon-obtained-list">
-            <h3>Pokémon Obtained</h3>
+        <div class="pokemon-team-container-and-form">
+            <div id="pokemon-team-container">
+                <h3>Pokémon Team</h3>
+            </div>
+            <div>
+                <form id="save-team">
+                    <input type="text" placeholder="Team name" name="team-name" id="team-name">
+                    <button type="submit">Save team</button>
+                </form>
+            </div>
         </div>
-        <div>
-            <h3>Pokémon Team List</h3>
-            <ol id='pokemon-team-list'></ol>
-        </div>
-        <div id="pokemon-team-container">
-            <h3>Pokémon Team</h3>
-            <form id="save-team">
-                <input type="text" placeholder="Team name" name="team-name" id="team-name">
-                <button type="submit">Save team</button>
-            </form>
-        </div>
-        <div>
-            <form id="pokemon-search-form">
-                <input list="pokemon-datalist" type="text" placeholder="Pokémon name" name="search" id="search" >
-                <datalist id="pokemon-datalist"></datalist>
-                <button type="submit">Find</button>
-            </form>
-        </div>
-        <div>
-            <ol id="pokemon-list-container"></ol>
-        </div>
-        <div>
-            <button id="back"> <= </button>
-            <button id="forward"> => </button>
+            <div class="pokemon-list-background">
+            <div>
+                <form id="pokemon-search-form">
+                    <input list="pokemon-datalist" type="text" placeholder="Pokémon name" name="search" id="search" >
+                    <datalist id="pokemon-datalist"></datalist>
+                    <button type="submit">Find</button>
+                </form>
+                <div class="random-pokemon-button-div">
+                    <button id="random-pokemon">Get Random Pokemon</button>
+                </div>
+            </div>
+            <div>
+                <ol id="pokemon-list-container"></ol>
+            </div>
+            <div>
+                <button id="back"> <= </button>
+                <button id="forward"> => </button>
+            </div>
         </div>
     </main>
     <footer>
         <div>
-            <p>Created by Willie Shi and Alan Xu</p>   
+            <p class="footer-div">Created by Willie Shi and Alan Xu</p>   
         </div>
     </footer>
 
