--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div>
                 <ol id="pokemon-list-container"></ol>
             </div>
-            <div>
+            <div class=front-back-button>
                 <button id="back"> <= </button>
                 <button id="forward"> => </button>
             </div>
