--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokémon Pokédex</title>
-    <link rel="icon" href="/images/pokeball-icon.svg">
+    <link rel="icon" href="images/pokeball-icon.svg">
     <script defer src="src/script.js"></script> 
     <link rel="stylesheet" href="style.css">
-</head>
+</head> 
 <body>
     <body>
-        <audio autoplay loop id="player" src="/music/Pokémon Center.mp3" type="audio/mpeg"></audio>
+        <audio autoplay loop id="player" src="music/Pokémon Center.mp3" type="audio/mpeg"></audio> 
         <div>
             <button id=mute-button onclick="document.getElementById('player').muted=!document.getElementById('player').muted">Mute/ Unmute ♫</button>
         </div>
     <header>
-        <img class="pokeball" src="/images/pokeball.webp" alt="pokeball">
+        <img class="pokeball" src="images/pokeball.png" alt="pokeball">
         <h1 class="pokemon-header">Pokémon Pokédex</h1>    
     </header>
     <main>
