added a audio player to fix autoplay problems and added remove from team button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head> 
 <body>
     <body>
-        <audio autoplay loop id="player" src="music/Pokémon Center.mp3" type="audio/mpeg"></audio> 
+        <audio autoplay controls loop id="player" src="music/Pokémon Center.mp3" type="audio/mpeg"></audio> 
         <div>
             <button id=mute-button onclick="document.getElementById('player').muted=!document.getElementById('player').muted">Mute/ Unmute ♫</button>
         </div>
